<?xml version="1.0"?>
<package format="2">
  <name>khmot</name>
  <version>0.1.0</version>
  <description>Multiple Object Tracker</description>
  <maintainer email="rsokolkov@gmail.com">Roman Sokolkov</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>message_runtime</depend>
</package>
