<?xml version="1.0"?>
<package format="2">
  <name>khmot</name>
  <version>0.1.0</version>
  <description>Multiple Object Tracker</description>
  <maintainer email="rsokolkov@gmail.com">Roman Sokolkov</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <depend>jsk_recognition_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>khmot_msgs</depend>
</package>
