<?xml version="1.0"?>
<package format="2">
  <name>khmot_msgs</name>
  <version>0.1.0</version>
  <description>Multiple Object Tracker ROS Messages</description>
  <maintainer email="rsokolkov@gmail.com">Roman Sokolkov</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
